[gd_scene load_steps=3 format=3 uid="uid://tr8lyt4o001j"]

[ext_resource type="Script" path="res://scripts/game_info.gd" id="1_vwl6e"]
[ext_resource type="Script" path="res://scripts/clock.gd" id="2_50msv"]

[node name="GameInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vwl6e")

[node name="Clock" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.531
anchor_bottom = 0.531
offset_left = 39.0
offset_top = 45.558
offset_right = 127.0
offset_bottom = 87.558
grow_horizontal = 2
rotation = -1.5708
theme_override_font_sizes/font_size = 30
text = "00:00"
horizontal_alignment = 1
script = ExtResource("2_50msv")

[node name="Timer" type="Timer" parent="Clock"]
wait_time = 10.0
one_shot = true

[node name="StartMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 647.0
offset_top = 132.0
offset_right = -639.0
offset_bottom = -440.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -15.5
offset_right = 48.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Start game!"

[node name="TextureRect" type="TextureRect" parent="StartMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -252.0
offset_right = 252.0
offset_bottom = 127.0
grow_horizontal = 2
expand_mode = 1

[node name="GameOverMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -112.5
offset_right = 143.0
offset_bottom = 112.5
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.5
offset_top = -31.0
offset_right = 34.5
grow_horizontal = 2
grow_vertical = 0
text = "Restart!"

[node name="Label" type="Label" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.5
offset_right = 150.5
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Game over!"
horizontal_alignment = 1
uppercase = true

[connection signal="timeout" from="Clock/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GameOverMenu/RestartButton" to="." method="_on_restart_button_pressed"]
